--- a/kapitel/wichtige_befehle.tex
+++ b/kapitel/wichtige_befehle.tex
@@ -215,6 +215,8 @@ Soll der \textbf{Name des referenzierten Objektes} ausgegeben werden, kann dies 
 
 Mit dem Befehl \textbf{\texttt{\textbackslash hyperref[name]\{eigener Kommentar\}}} kann ein Link auf das Label gesetzt werden. Dafür wird das Paket \textbf{hyperref} benötigt.
 
+Mit \textbf{\texttt{\textbackslash href\{URL\}\{Text\}}} kann ein Link zu einer URL gesetzt werden.
+
 In \autoref{tab:querverweise} wird dies anhand eines Beispiels demonstriert:
 \input{anlagen/tabellen/quellenverweise}
 
