--- a/anlagen/tabellen/quellenverweise.tex
+++ b/anlagen/tabellen/quellenverweise.tex
@@ -10,6 +10,7 @@
         \texttt{\textbackslash autoref\{sec:querverweise\}}                          & \autoref{sec:querverweise}                          \\
         \texttt{\textbackslash nameref\{sec:querverweise\}}                          & \nameref{sec:querverweise}                          \\
         \texttt{\textbackslash hyperref[sec:querverweise]\{siehe bei Querverweise\}} & \hyperref[sec:querverweise]{siehe bei Querverweise} \\
+        \texttt{\textbackslash href\{URL\}\{Text\}}                                  & \href{https://www.google.de}{Google}                \\
         \bottomrule
     \end{tabular}
     \caption{Übersicht über verschiedene Referenzbefehle}
